# OS

./: readme.md
Lexer/: CMakeLists.txt  main.cpp  readme.md
Lexer/catch2/: catch_amalgamated.cpp.asc  catch_amalgamated.hpp.asc
Lexer/src/Common/: Position.h
Lexer/src/Lexem/: Lexem.cpp  Lexem.h
Lexer/src/Lexer/: Lexer.cpp  Lexer.h
Lexer/src/Token/: Token.cpp  Token.h  TokenType.h
Lexer/src/utils/LexerDialog/: LexerDialog.cpp  LexerDialog.h
Lexer/test/: file.txt  test.cpp
Lexer/test/files/: all-output.txt  all.txt  brackets-output.txt  brackets.txt  ids_and_assignments-output.txt  ids_and_assignments.txt
OS/: .gitignore
OS/lab1/Mealy-Moore/: CMakeLists.txt  main.cpp
OS/lab1/Mealy-Moore/src/Common/: LetterRandomizer.h
OS/lab1/Mealy-Moore/src/Converter/: MachineConverter.h
OS/lab1/Mealy-Moore/src/MachineSaver/: MachineSaver.h
OS/lab1/Mealy-Moore/src/TextParser/: CSVTextParser.h
OS/lab2/Minimization/: CMakeLists.txt  main.cpp
OS/lab2/Minimization/src/Args/: Args.h  ArgsParser.h
OS/lab2/Minimization/src/Common/: Lettering.h
OS/lab2/Minimization/src/Machine/: Machine.h
OS/lab2/Minimization/src/MachineMinimizator/: MachineMinimizator.cpp  MachineMinimizator.h
OS/lab2/Minimization/src/MachineSaver/: MachineSaver.h
OS/lab2/Minimization/src/TextParser/: CSVTextParser.h
OS/lab3/NotDSMToDSM/: main.cpp
